--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -37,7 +37,7 @@ jobs:
         continue-on-error: true
       - name: Terraform Init
         id: init
-        run: terraform init -backend-config="subscription_id=${{ env.ARM_SUBSCRIPTION_ID }}" -backend-config="tenant-id=${{ env.ARM_TENANT_ID }}"
+        run: terraform init -backend-config="subscription_id=${{ env.ARM_SUBSCRIPTION_ID }}" -backend-config="tenant_id=${{ env.ARM_TENANT_ID }}"
       - name: Terraform Validate
         id: validate
         run: terraform validate -no-color
