--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -28,7 +28,7 @@ jobs:
           terraform_version: 1.2.6
       - name: Terraform Init
         id: init
-        run: terraform init -backend-config="subscription_id=${{ env.ARM_SUBSCRIPTION_ID }}" -backend-config="tenant_id=${{ env.ARM_TENANT_ID }}"
+        run: terraform init
       - name: Terraform Apply
         id: apply
         run: terraform apply -auto-approve -input=false
