--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -32,7 +32,8 @@ jobs:
         uses: hashicorp/setup-terraform@v2
       - name: Terraform Init
         id: init
-        run: terraform init \
+        run: |
+          terraform init \
           -backend-config="subscription_id=${{ env.ARM_SUBSCRIPTION_ID }}" \
           -backend-config="tenant_id=${{ env.ARM_TENANT_ID }}" \
           -backend-config="resource_group_name=${{ env.RESOURCE_GROUP_NAME }}" \
