--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -41,7 +41,8 @@ jobs:
         continue-on-error: true
       - name: Terraform Init
         id: init
-        run: terraform init \
+        run: |
+          terraform init \
           -backend-config="subscription_id=${{ env.ARM_SUBSCRIPTION_ID }}" \
           -backend-config="tenant_id=${{ env.ARM_TENANT_ID }}" \
           -backend-config="resource_group_name=${{ env.RESOURCE_GROUP_NAME }}" \
