--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -19,6 +19,12 @@ env:
   ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
   ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
   ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
+  CONTAINER_NAME: "tfstate"
+  RESOURCE_GROUP_NAME: "rg-terraforn-state-dev-001"
+  STATE_FILE_NAME: "terraform.tfstate"
+  STORAGE_ACCOUNT_NAME: "tfstatenoplandev"
+  USE_AZUREAD_AUTH: true
+  USE_OIDC: true
 
 jobs:
   plan:
@@ -29,15 +35,22 @@ jobs:
         uses: actions/checkout@v3
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v2
-        with:
-          terraform_version: 1.2.6
       - name: Terraform formatting check
         id: fmt
         run: terraform fmt -check
         continue-on-error: true
       - name: Terraform Init
         id: init
-        run: terraform init -backend-config="subscription_id=${{ env.ARM_SUBSCRIPTION_ID }}" -backend-config="tenant_id=${{ env.ARM_TENANT_ID }}"
+        run: |
+          terraform init \
+          -backend-config="subscription_id=${{ env.ARM_SUBSCRIPTION_ID }}" \
+          -backend-config="tenant_id=${{ env.ARM_TENANT_ID }}" \
+          -backend-config="resource_group_name=${{ env.RESOURCE_GROUP_NAME }}" \
+          -backend-config="storage_account_name=${{ env.STORAGE_ACCOUNT_NAME }}" \
+          -backend-config="container_name=${{ env.CONTAINER_NAME }}" \
+          -backend-config="key=${{ env.STATE_FILE_NAME }}" \
+          -backend-config="use_azuread_auth=${{ env.USE_AZUREAD_AUTH }}" \
+          -backend-config="use_oidc=${{ env.USE_OIDC }}"
       - name: Terraform Validate
         id: validate
         run: terraform validate -no-color
